[add] lodash types

--- a/package.json
+++ b/package.json
@@ -5,15 +5,23 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "lite-server"
+    "start": "webpack-dev-server"
   },
   "keywords": [
     "typescript",
     "course"
   ],
-  "author": "Maximilian Schwarzmüller",
+  "author": "study",
   "license": "ISC",
+  "dependencies": {
+    "lodash": "^4.17.21",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.5",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
+  },
   "devDependencies": {
-    "lite-server": "^2.5.4"
+    "@types/lodash": "^4.14.197"
   }
 }
