--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
   ],
   "author": "study",
   "license": "ISC",
+  "devDependencies": {
+    "@types/lodash": "^4.14.146"
+  },
   "dependencies": {
-    "lodash": "^4.17.21",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "lodash": "^4.17.15",
+    "reflect-metadata": "^0.1.13",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.5",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
-  },
-  "devDependencies": {
-    "@types/lodash": "^4.14.197"
   }
 }
