--- a/package.json
+++ b/package.json
@@ -11,20 +11,17 @@
     "typescript",
     "course"
   ],
-  "author": "study",
+  "author": "Maximilian Schwarzmüller",
   "license": "ISC",
   "devDependencies": {
-    "@types/lodash": "^4.14.146"
-  },
-  "dependencies": {
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
-    "lodash": "^4.17.15",
-    "reflect-metadata": "^0.1.13",
+    "@types/google.maps": "^3.54.0",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.5",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "axios": "^0.19.0"
   }
 }
